--- a/contacto.html
+++ b/contacto.html
@@ -98,7 +98,7 @@
                     </div>
 
                     <div class="map-card">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.6729517173874!2d-76.98064432415178!3d-12.134510043516584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b81093f4337b%3A0x6e26716a445c9255!2sAv.%20Alfredo%20Benavides%205125%2C%20Santiago%20de%20Surco%2015039!5e0!3m2!1ses!2spe!4v1704231234567!5m2!1ses!2spe" 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.743132717387!2d-76.9856114!3d-12.1263056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c7f8a7356673%3A0x6a1b2b8c9f0c6a1b!2sAv.%20Alfredo%20Benavides%205125%2C%20Santiago%20de%20Surco%2015039!5e0!3m2!1ses!2spe!4v1700000000000" 
                         width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
@@ -108,6 +108,13 @@
 
     <footer class="main-footer">
         <div class="container">
+            <div class="social-footer" style="margin-bottom: 20px;">
+                <p style="margin-bottom: 10px; font-weight: 600;">SÍGUENOS EN REDES SOCIALES</p>
+                <div style="display: flex; justify-content: center; gap: 20px; font-size: 24px;">
+                    <a href="https://web.facebook.com/profile.php?id=61552613127779&locale=es_LA" target="_blank" style="color: #1877F2;"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/clinicavet.exotickingdom/" target="_blank" style="color: #E4405F;"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
             <p>© 2026 Exotic Kingdom. Todos los derechos reservados.</p>
         </div>
     </footer>
@@ -116,7 +123,6 @@
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
-    <!-- Navegación inferior para móviles -->
     <nav class="mobile-bottom-nav" aria-label="Navegación móvil">
         <a href="index.html" class="mb-link" id="mb-home"><i class="fa-solid fa-house mb-icon"></i><span>Inicio</span></a>
         <a href="especies.html" class="mb-link" id="mb-services"><i class="fa-solid fa-paw mb-icon"></i><span>Servicios</span></a>
@@ -164,4 +170,4 @@
         })();
     </script>
 </body>
-</html>w
+</html>
